# ClinicalConnectome

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/bids_converter/: __init__.py  cli.py  converter.py
src/bids_converter/resources/: missing_json_fields.py
src/bids_converter/resources/reference_bids/: .bidsignore  CHANGES  README  dataset_description.json  participants.json
src/clinical_connectome/: __init__.py  register_cli.py  registration.py
tests/: test_cli_help.py  test_id_mapping.py  test_registration_cli.py  test_registration_workflow.py  test_resources_and_validation.py
